[gd_scene load_steps=13 format=3 uid="uid://dsvdjk1g4ajry"]

[ext_resource type="Script" uid="uid://bgsew3sjg8k1t" path="res://game/scenes/main_scene_game.gd" id="1_ieygd"]
[ext_resource type="Texture2D" uid="uid://dn75fqojfj5dk" path="res://assets/Agua/Gotera-chargo.png" id="1_mqxrd"]
[ext_resource type="Texture2D" uid="uid://bxv2ay2lofode" path="res://assets/tuberia/conector-tube2.png" id="2_a8f63"]
[ext_resource type="Texture2D" uid="uid://bdnebaouig4r8" path="res://assets/Aquaplant/fondo_mar_segundo_panel.png" id="2_k53vo"]
[ext_resource type="Texture2D" uid="uid://hxv2apw6khbv" path="res://assets/Aquaplant/tank-agua.png" id="2_sv8yq"]
[ext_resource type="Texture2D" uid="uid://ci8ke2quhe7gg" path="res://assets/Tank/tuber√≠a-larga-agua.png" id="3_a8f63"]
[ext_resource type="Texture2D" uid="uid://5djp4adm0x7w" path="res://assets/Valvulas/valvula-3.png" id="4_ieygd"]
[ext_resource type="Texture2D" uid="uid://b6p2gwfu0wi1" path="res://assets/Bomba de agua/bomb-water.png" id="7_ox5h3"]
[ext_resource type="Texture2D" uid="uid://bt6pm0ve4vjgh" path="res://assets/Aquaplant/biopochito.png" id="8_ox5h3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ox5h3"]
size = Vector2(106, 110)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k53vo"]
size = Vector2(93, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqfcf"]
size = Vector2(78, 25)

[node name="Main_Scene_game" type="Node2D"]
script = ExtResource("1_ieygd")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -7.0
offset_right = 1905.0
offset_bottom = 1017.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k53vo")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Guia" type="Control" parent="CanvasLayer2"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 806.0
offset_bottom = 533.0

[node name="character" type="Sprite2D" parent="CanvasLayer2/Guia"]
position = Vector2(125, 189)
scale = Vector2(0.8323263, 0.8541247)
texture = ExtResource("8_ox5h3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2/Guia"]
root_node = NodePath("../..")

[node name="Label" type="Label" parent="CanvasLayer2/Guia"]
layout_mode = 0
offset_left = 187.0
offset_top = 67.0
offset_right = 848.0
offset_bottom = 413.0

[node name="Label2" type="Label" parent="CanvasLayer2/Guia"]
layout_mode = 0
offset_left = 208.0
offset_top = 42.0
offset_right = 760.0
offset_bottom = 129.0
theme_override_colors/font_color = Color(0.9474059, 4.0670484e-06, 3.85046e-07, 1)
theme_override_font_sizes/font_size = 30
text = "¬°Bienvenido a AquaLearn!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="panelbox" type="Panel" parent="CanvasLayer2/Guia"]
layout_mode = 0
offset_left = 183.0
offset_top = 112.0
offset_right = 851.0
offset_bottom = 424.0

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer2/Guia"]

[node name="HUD" type="Control" parent="CanvasLayer2/Guia/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1162.0
offset_bottom = -562.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelAgua" type="Label" parent="CanvasLayer2/Guia/CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -186.0
offset_top = 182.0
offset_right = 105.0
offset_bottom = 233.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "üíß Agua: 80L (80%)"

[node name="LabelPuntos" type="Label" parent="CanvasLayer2/Guia/CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -184.0
offset_top = 235.0
offset_right = 219.0
offset_bottom = 291.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "‚≠ê Puntos: 0 | ‚ùå Errores: 0"

[node name="LabelMision" type="Label" parent="CanvasLayer2/Guia/CanvasLayer/HUD"]
layout_mode = 0
offset_left = 190.0
offset_top = 333.0
offset_right = 843.0
offset_bottom = 417.0
theme_override_font_sizes/font_size = 30
text = "üéØ Misi√≥n: Cargando..."

[node name="Title_HUD" type="Label" parent="CanvasLayer2/Guia/CanvasLayer"]
offset_left = 288.0
offset_top = 126.0
offset_right = 458.0
offset_bottom = 168.0
theme_override_colors/font_color = Color(0.96306914, 0.9546005, 7.70092e-07, 1)
theme_override_font_sizes/font_size = 30
text = "PANEL HUD"

[node name="Title_Quest" type="Label" parent="CanvasLayer2/Guia/CanvasLayer"]
offset_left = 271.0
offset_top = 285.0
offset_right = 470.0
offset_bottom = 327.0
theme_override_colors/font_color = Color(0.94509804, 1, 0, 1)
theme_override_font_sizes/font_size = 30
text = "PANEL QUEST"

[node name="Tooltip" type="Label" parent="CanvasLayer2"]
visible = false
offset_left = 974.0
offset_top = 186.0
offset_right = 1080.0
offset_bottom = 223.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Tooltip"
autowrap_mode = 2

[node name="ValvulaLavado" type="Area2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="ValvulaLavado"]
offset_left = 726.0
offset_top = 461.5
offset_right = 1348.0
offset_bottom = 873.5
texture = ExtResource("3_a8f63")
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="ValvulaLavado"]
position = Vector2(1049, 466.5)
texture = ExtResource("4_ieygd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ValvulaLavado"]
position = Vector2(1044, 438)
shape = SubResource("RectangleShape2D_ox5h3")

[node name="ValvulaDesague" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ValvulaDesague"]
position = Vector2(1622.5, 778.5)
texture = ExtResource("7_ox5h3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ValvulaDesague"]
position = Vector2(1592.5, 656)
shape = SubResource("RectangleShape2D_k53vo")

[node name="ValvulaCisterna" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ValvulaCisterna"]
position = Vector2(611.5, 648)
scale = Vector2(1.5059998, 1.108)
texture = ExtResource("2_a8f63")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ValvulaCisterna"]
position = Vector2(685, 441)
shape = SubResource("RectangleShape2D_uqfcf")

[node name="TanqueAgua" type="Sprite2D" parent="."]
position = Vector2(456, 801.00006)
scale = Vector2(1.001634, 0.9289215)
texture = ExtResource("2_sv8yq")

[node name="Agua-Tank" type="TextureRect" parent="TanqueAgua"]
offset_left = 77.92859
offset_top = 48.258057
offset_right = 233.92865
offset_bottom = 207.25806
texture = ExtResource("1_mqxrd")
expand_mode = 1
